--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
       background-size: cover;
       background-attachment: fixed;
       background-position: center;
-      background-image: url("background.gif");
+      background-image: url("background.png");
     }
 
     .container {
