--- a/physical-cards.html
+++ b/physical-cards.html
@@ -610,41 +610,43 @@ p.info {
 
   <div class="contact-box content-wrapper">
     <div class="contact-margin left-section">
-      <h2 class="prod-title">PHYSICAL CARDS</h2>
+      <h2 class="prod-title">PAYPAL TRANSFERS</h2>
       <a class="review-link" href="reviews.html">
-        <p class="stars">★★★★★ 5 (21 Reviews)</p>
+        <p class="stars">★★★★★ 5.0 (21 Reviews)</p>
       </a>
       <img class="prod-img" src="prod/cloned.gif">
-      <p class="grey">✔ Verified product - Physical Cards with balance</p>
+      <p class="grey">✔ Verified - Physical Cards with balance</p>
+      <h2 class="green">Basic Information</h2>
+      <hr>
+      <p class="prod-desc">
+        -> Transfer Will be Made in 15 Minutes ✔️<br>
+        -> Money Will be Sent to Your Personal PayPal✔️<br>
+        -> Risk Rate 0%✔️
+      </p>
       <h2 class="green">How does it work?</h2>
       <hr>
       <p class="prod-desc">
-        These physical cards work just like regular ones. You will receive our card with your balance and a code on it. Then you'll need to find the nearest ATM and withdraw the money just like from a regular card (In every purchase you will get a file which explains step by step how to safely cash out). NO MASK OR GLOVES NEEDED!!
-      </p>
-      <h2 class="green">Meaning of PIN Codes?</h2>
-      <hr>
-      <p class="prod-desc">
-        The pin code for all cards starts with the number "1". The other numbers depends on the amount inside the card, for example: €850 balance card pin code would be 1850; €400 balance card pin code would be 1400.
+        Check out as guest and enter your PayPal email. Once the payment is made we will start transferring the money to your provided email.
       </p>
       <h2 class="green">Does it work Worldwide</h2>
       <hr>
       <p class="prod-desc">
-        Of course! This physical card method works in any country with ATMs.
+        Yes! In every country that provides PayPal. You only need a PayPal account.
       </p>
       <h2 class="green">Is It Safe</h2>
       <hr>
       <p class="prod-desc">
-        Completely! Cashing out money with our physical card method is LEGAL. You don't need to use mask or gloves, you can also do it in day time! You are not STEALING other peoples money, you are cashing out your personal card:). Also, the money you receive is FULLY LEGAL AND USABLE (you can put that money in your personal bank or buy whatever you want)!
+        Completely! If the transfer is made by us, there is 0% risk for you.
       </p>
       <h2 class="green">Does it really work</h2>
       <hr>
       <p class="prod-desc">
         If you buy from us, you are 100% sure that the card will reach you and if there is any problem, a full refund is guaranteed.
       </p>
-      <h2 class="green">Do you have proofs?</h2>
+      <h2 class="green">Check our vouches and cashouts -</h2>
       <hr>
       <p class="prod-desc">
-        Yes, we are making cashout videos using our cards every day, you can find it in our telegram channel: <a href="https://t.me/whitesofficial">https://t.me/whitesofficial</a>
+        <a href="https://www.instagram.com/globalwhites.shop/">www.instagram.com/globalwhites.shop/</a>
       </p>
     </div>
     
@@ -664,28 +666,28 @@ p.info {
 
   <div class="container2 right-section">
     <!-- Product Options -->
-    <div class="product-option" data-price="100" data-stock="26" data-url="delivery-cc100.html">
-      <p>950€ Balance</p>
-      <p>In Stock ( 26 )</p>
+    <div class="product-option" data-price="100" data-stock="4" data-url="delivery-cc100.html">
+      <p>845€ TRANSFER | 100€</p>
+      <p>In Stock ( 4 )</p>
     </div>
-    <div class="product-option" data-price="200" data-stock="18" data-url="delivery-cc200.html">
-      <p>1600€ Balance</p>
-      <p>In Stock ( 18 )</p>
+    <div class="product-option" data-price="200" data-stock="6" data-url="delivery-cc200.html">
+      <p>1710€ TRANSFER | 200€</p>
+      <p>In Stock ( 6 )</p>
     </div>
-    <div class="product-option" data-price="300" data-stock="22" data-url="delivery-cc300.html">
-      <p>2200€ Balance</p>
-      <p>In Stock ( 22 )</p>
+    <div class="product-option" data-price="300" data-stock="1" data-url="delivery-cc300.html">
+      <p>	2585€ TRANSFER | 300€</p>
+      <p>In Stock ( 1 )</p>
     </div>
-    <div class="product-option" data-price="400" data-stock="14" data-url="delivery-cc400.html">
-      <p>3500€ Balance</p>
-      <p>In Stock ( 14 )</p>
+    <div class="product-option" data-price="400" data-stock="2" data-url="delivery-cc400.html">
+      <p>3470€ TRANSFER | 400€</p>
+      <p>In Stock ( 2 )</p>
     </div>
 
     <!-- Details Section -->
     <div class="details">
       <p class="price">€100.00</p>
       <p>Delivery Time: ⚡ Instant</p>
-      <p>In Stock: ✔  <span class="stock">12</span></p>
+      <p>In Stock: ✔  <span class="stock">4</span></p>
 
       <!-- Quantity Control -->
       <div class="quantity-control">
