--- a/products.html
+++ b/products.html
@@ -407,37 +407,11 @@ p.info {
   </div>
 
     <div class="product-grid">
-        <a href="wise-accounts.html" class="product-card">
-            <img src="prod/wised.gif" alt="Product 1">
-            <div class="marginto">
-            <h3 class="bigname">Wise Accounts</h3>
-            <p class="info">TransferWise Accounts with balance.</p>
-            <p class="price">
-                <span class="price-amount">€ 100.00</span>
-                <span class="stock-amount">IN STOCK ✔</span>
-            </p>
-        </div>    
-            <button>Purchase</button>
-          </a>
-          
-          <a href="physical-cards.html" class="product-card">
-            <img src="prod/cloned.gif" alt="Product 2">
-            <div class="marginto">
-            <h3 class="bigname">Physical Cards</h3>
-            <p class="info">Physical duplicates cards with balances.</p>
-            <p class="price">
-                <span class="price-amount">€ 100.00</span>
-                <span class="stock-amount">IN STOCK ✔</span>
-            </p>
-        </div>     
-            <button>Purchase</button>
-          </a>
-
-      <a href="virtual-cards.html" class="product-card">
-        <img src="prod/virtual.gif" alt="Product 3">
+      <a href="wise-accounts.html" class="product-card">
+        <img src="prod/wised.gif" alt="Product 1">
         <div class="marginto">
-        <h3 class="bigname">Virtual Cards</h3>
-        <p class="info">Virtual Credit cards for online, apple pay, google pay.</p>
+        <h3 class="bigname">Wise Accounts</h3>
+        <p class="info">TransferWise Accounts with balance.</p>
         <p class="price">
             <span class="price-amount">€ 100.00</span>
             <span class="stock-amount">IN STOCK ✔</span>
@@ -445,6 +419,71 @@ p.info {
     </div>    
         <button>Purchase</button>
       </a>
+      
+      <a href="physical-cards.html" class="product-card">
+        <img src="prod/cloned.gif" alt="Product 2">
+        <div class="marginto">
+        <h3 class="bigname">PayPal Transfers</h3>
+        <p class="info">Safest PayPal transfers int your account.</p>
+        <p class="price">
+            <span class="price-amount">€ 100.00</span>
+            <span class="stock-amount">IN STOCK ✔</span>
+        </p>
+    </div>     
+        <button>Purchase</button>
+      </a>
+
+  <a href="virtual-cards.html" class="product-card">
+    <img src="prod/virtual.gif" alt="Product 3">
+    <div class="marginto">
+    <h3 class="bigname">Virtual Cards</h3>
+    <p class="info">Virtual Credit cards for online, apple pay, google pay.</p>
+    <p class="price">
+        <span class="price-amount">€ 100.00</span>
+        <span class="stock-amount">IN STOCK ✔</span>
+    </p>
+</div>    
+    <button>Purchase</button>
+  </a>
+
+  <a href="crypto-logs.html" class="product-card">
+    <img src="prod/cryptolog.gif" alt="Product 3">
+    <div class="marginto">
+    <h3 class="bigname">Crypto Logins</h3>
+    <p class="info">Random balance crypto wallets secret phrases.</p>
+    <p class="price">
+        <span class="price-amount">€ 150.00</span>
+        <span class="stock-amount">IN STOCK ✔</span>
+    </p>
+</div>    
+    <button>Purchase</button>
+  </a>
+
+  <a href="capture.html" class="product-card">
+    <img src="prod/capture.gif" alt="Product 3">
+    <div class="marginto">
+    <h3 class="bigname">Capturing Tutorial</h3>
+    <p class="info">Capture crypto, paypal, bank logs. Full guide.</p>
+    <p class="price">
+        <span class="price-amount">€ 200.00</span>
+        <span class="stock-amount">IN STOCK ✔</span>
+    </p>
+</div>    
+    <button>Purchase</button>
+  </a>
+
+  <a href="prepaid-card.html" class="product-card">
+    <img src="prod/prepaid.gif" alt="Product 3">
+    <div class="marginto">
+    <h3 class="bigname">2500$ Prepaid Card</h3>
+    <p class="info">Stolen 2500$ prepaid credit card. (Works Worldwide) E-shops.</p>
+    <p class="price">
+        <span class="price-amount">€ 250.00</span>
+        <span class="stock-amount">IN STOCK ✔</span>
+    </p>
+</div>    
+    <button>Purchase</button>
+  </a>
       </div>
 
       <footer class="footer">
