--- a/wise-accounts.html
+++ b/wise-accounts.html
@@ -612,7 +612,7 @@ p.info {
     <div class="contact-margin left-section">
       <h2 class="prod-title">WISE ACCOUNTS</h2>
       <a class="review-link" href="reviews.html">
-        <p class="stars">★★★★★ 5 (32 Reviews)</p>
+        <p class="stars">★★★★★ 4.9 (26 Reviews)</p>
       </a>
       <img class="prod-img" src="prod/wised.gif">
       <p class="grey">✔ Verified product - Wise accounts with balance</p>
@@ -636,10 +636,10 @@ p.info {
       <p class="prod-desc">
         If you buy from us, you are 100% sure that the card will reach you and if there is any problem, a full refund is guaranteed.
       </p>
-      <h2 class="green">Do you have proofs?</h2>
+      <h2 class="green">Check our vouches and cashouts -</h2>
       <hr>
       <p class="prod-desc">
-        Yes, we are making cashout videos using our cards every day, you can find it in our telegram channel: <a href="https://t.me/whitesofficial">https://t.me/whitesofficial</a>
+        <a href="https://www.instagram.com/globalwhites.shop/">www.instagram.com/globalwhites.shop/</a>
       </p>
     </div>
     
@@ -659,28 +659,28 @@ p.info {
 
   <div class="container2 right-section">
     <!-- Product Options -->
-    <div class="product-option" data-price="100" data-stock="18" data-url="delivery-wise100.html">
+    <div class="product-option" data-price="100" data-stock="12" data-url="delivery-wise100.html">
       <p>950€ Balance</p>
-      <p>In Stock ( 18 )</p>
+      <p>In Stock ( 12 )</p>
     </div>
-    <div class="product-option" data-price="200" data-stock="33" data-url="delivery-wise200.html">
+    <div class="product-option" data-price="200" data-stock="3" data-url="delivery-wise200.html">
       <p>1600€ Balance</p>
-      <p>In Stock ( 33 )</p>
+      <p>In Stock ( 3 )</p>
     </div>
-    <div class="product-option" data-price="300" data-stock="9" data-url="delivery-wise300.html">
+    <div class="product-option" data-price="300" data-stock="6" data-url="delivery-wise300.html">
       <p>2200€ Balance</p>
-      <p>In Stock ( 9 )</p>
+      <p>In Stock ( 6 )</p>
     </div>
-    <div class="product-option" data-price="400" data-stock="13" data-url="delivery-wise400.html">
+    <div class="product-option" data-price="400" data-stock="8" data-url="delivery-wise400.html">
       <p>3500€ Balance</p>
-      <p>In Stock ( 13 )</p>
+      <p>In Stock ( 8 )</p>
     </div>
 
     <!-- Details Section -->
     <div class="details">
       <p class="price">€100.00</p>
       <p>Delivery Time: ⚡ Instant</p>
-      <p>In Stock: ✔  <span class="stock">18</span></p>
+      <p>In Stock: ✔  <span class="stock">12</span></p>
 
       <!-- Quantity Control -->
       <div class="quantity-control">
