--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       background-size: cover;
       background-attachment: fixed;
       background-position: center;
-      background-image: url("background.png")
+      background-image: url("background.png");
     }
 
     .container {
@@ -54,7 +54,7 @@
   margin-bottom: 20px;
   padding: 15px 20px;
   border-radius: 15px;
-  font-size: 25px;
+  font-size: 29px;
   font-weight: 500;
   background-color: black;
   display: flex;
@@ -369,6 +369,7 @@ p.info {
 .white-teles {
   max-width: 19px;
 }
+
   </style>
 </head>
 <body>
@@ -422,8 +423,8 @@ p.info {
           <a href="physical-cards.html" class="product-card">
             <img src="prod/cloned.gif" alt="Product 2">
             <div class="marginto">
-            <h3 class="bigname">Physical Cards</h3>
-            <p class="info">Physical duplicates cards with balances.</p>
+            <h3 class="bigname">PayPal Transfers</h3>
+            <p class="info">Safest PayPal transfers int your account.</p>
             <p class="price">
                 <span class="price-amount">€ 100.00</span>
                 <span class="stock-amount">IN STOCK ✔</span>
@@ -439,6 +440,45 @@ p.info {
         <p class="info">Virtual Credit cards for online, apple pay, google pay.</p>
         <p class="price">
             <span class="price-amount">€ 100.00</span>
+            <span class="stock-amount">IN STOCK ✔</span>
+        </p>
+    </div>    
+        <button>Purchase</button>
+      </a>
+
+      <a href="crypto-logs.html" class="product-card">
+        <img src="prod/cryptolog.gif" alt="Product 3">
+        <div class="marginto">
+        <h3 class="bigname">Crypto Logins</h3>
+        <p class="info">Random balance crypto wallets secret phrases.</p>
+        <p class="price">
+            <span class="price-amount">€ 150.00</span>
+            <span class="stock-amount">IN STOCK ✔</span>
+        </p>
+    </div>    
+        <button>Purchase</button>
+      </a>
+
+      <a href="capture.html" class="product-card">
+        <img src="prod/capture.gif" alt="Product 3">
+        <div class="marginto">
+        <h3 class="bigname">Capturing Tutorial</h3>
+        <p class="info">Capture crypto, paypal, bank logs. Full guide.</p>
+        <p class="price">
+            <span class="price-amount">€ 200.00</span>
+            <span class="stock-amount">IN STOCK ✔</span>
+        </p>
+    </div>    
+        <button>Purchase</button>
+      </a>
+
+      <a href="prepaid-card.html" class="product-card">
+        <img src="prod/prepaid.gif" alt="Product 3">
+        <div class="marginto">
+        <h3 class="bigname">2500$ Prepaid Card</h3>
+        <p class="info">Stolen 2500$ prepaid credit card. (Works Worldwide) E-shops.</p>
+        <p class="price">
+            <span class="price-amount">€ 250.00</span>
             <span class="stock-amount">IN STOCK ✔</span>
         </p>
     </div>    
