--- a/virtual-cards.html
+++ b/virtual-cards.html
@@ -612,7 +612,7 @@ p.info {
     <div class="contact-margin left-section">
       <h2 class="prod-title">VIRTUAL CARDS</h2>
       <a class="review-link" href="reviews.html">
-        <p class="stars">★★★★★ 5 (24 Reviews)</p>
+        <p class="stars">★★★★★ 4.8 (29 Reviews)</p>
       </a>
       <img class="prod-img" src="prod/virtual.gif">
       <p class="grey">✔ Verified product - Virtual Cards with balance</p>
@@ -634,17 +634,17 @@ p.info {
       <h2 class="green">Is It Safe</h2>
       <hr>
       <p class="prod-desc">
-        Completely! Cashing out money with our virtual card method is LEGAL. You don't need to use mask or gloves, you can also do it in day time! You are not STEALING other peoples money, you are cashing out your personal card:). Also, the money you receive is FULLY LEGAL AND USABLE (you can put that money in your personal bank or buy whatever you want).
+        Completely! Cashing out money with our virtual card method is LEGAL. You don't need to use mask or gloves, you can also do it in day time!
       </p>
       <h2 class="green">Does it really work</h2>
       <hr>
       <p class="prod-desc">
         If you buy from us, you are 100% sure that the card will reach you and if there is any problem, full refund is guaranteed.
       </p>
-      <h2 class="green">Do you have proofs?</h2>
+      <h2 class="green">Check our vouches and cashouts -</h2>
       <hr>
       <p class="prod-desc">
-        Yes, we are making cashout videos using our cards every day, you can find it in our telegram channel: <a href="https://t.me/whitesofficial">https://t.me/whitesofficial</a>
+        <a href="https://www.instagram.com/globalwhites.shop/">www.instagram.com/globalwhites.shop/</a>
       </p>
     </div>
     
@@ -664,28 +664,28 @@ p.info {
 
   <div class="container2 right-section">
     <!-- Product Options -->
-    <div class="product-option" data-price="100" data-stock="23" data-url="delivery-v100.html">
+    <div class="product-option" data-price="100" data-stock="14" data-url="delivery-v100.html">
       <p>950€ Balance</p>
-      <p>In Stock ( 23 )</p>
-    </div>
-    <div class="product-option" data-price="200" data-stock="7" data-url="delivery-v200.html">
-      <p>1600€ Balance</p>
-      <p>In Stock ( 7 )</p>
-    </div>
-    <div class="product-option" data-price="300" data-stock="14" data-url="delivery-v300.html">
-      <p>2200€ Balance</p>
       <p>In Stock ( 14 )</p>
     </div>
-    <div class="product-option" data-price="400" data-stock="19" data-url="delivery-v400.html">
+    <div class="product-option" data-price="200" data-stock="3" data-url="delivery-v200.html">
+      <p>1600€ Balance</p>
+      <p>In Stock ( 3 )</p>
+    </div>
+    <div class="product-option" data-price="300" data-stock="1" data-url="delivery-v300.html">
+      <p>2200€ Balance</p>
+      <p>In Stock ( 1 )</p>
+    </div>
+    <div class="product-option" data-price="400" data-stock="1" data-url="delivery-v400.html">
       <p>3500€ Balance</p>
-      <p>In Stock ( 19 )</p>
+      <p>In Stock ( 1 )</p>
     </div>
 
     <!-- Details Section -->
     <div class="details">
       <p class="price">€100.00</p>
       <p>Delivery Time: ⚡ Instant</p>
-      <p>In Stock: ✔  <span class="stock">23</span></p>
+      <p>In Stock: ✔  <span class="stock">14</span></p>
 
       <!-- Quantity Control -->
       <div class="quantity-control">
