--- a/contact.html
+++ b/contact.html
@@ -553,6 +553,7 @@ p.info {
               <h3 class="footer-section-title">SOCIAL</h3>
               <ul>
                 <li><a href="https://t.me/GlobalWht"><img class="white-teles" src="white-tele.png"> Telegram</a></li>
+                <li><a href="https://www.instagram.com/globalwhites.2/"><img class="white-teles" src="icon-instag.png"> Instagram</a></li>
               </ul>
             </div>
             
