--- a/physical-cards.html
+++ b/physical-cards.html
@@ -410,8 +410,13 @@ p.info {
 }
 
 .prod-img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     border: solid 1px #5cfa00;
     border-radius: 15px;
+    width: 70%; /* or adjust as needed */
+    height: auto;
 }
 
 .prod-title {
@@ -646,7 +651,7 @@ p.info {
       <h2 class="green">Check our vouches and cashouts -</h2>
       <hr>
       <p class="prod-desc">
-        <a href="https://www.instagram.com/globalwhites.shop/">www.instagram.com/globalwhites.shop/</a>
+        <a href="https://www.instagram.com/globalwhites.2/">https://www.instagram.com/globalwhites.2/</a>
       </p>
     </div>
     
@@ -659,7 +664,7 @@ p.info {
 
     <p class="prod-desc1">Due to the nature of digital products, when purchasing a product via Sellix, you are covered by a product warranty.</p>
 
-    <p class="mark-warranty">You’re eligible for a refund  for 12 HOURS!</p>
+    <p class="mark-warranty">You’re eligible for a refund  for 24 HOURS!</p>
 
     <p class="prod-desc1">This warranty is valid and verified by our Terms & Service, ensuring our customers are protected.</p>
   </div>
@@ -725,6 +730,7 @@ p.info {
               <h3 class="footer-section-title">SOCIAL</h3>
               <ul>
                 <li><a href="https://t.me/GlobalWht"><img class="white-teles" src="white-tele.png"> Telegram</a></li>
+                <li><a href="https://www.instagram.com/globalwhites.2/"><img class="white-teles" src="icon-instag.png"> Instagram</a></li>
               </ul>
             </div>
             
